k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      imagePullSecrets:
        - name: gcr-json-key
      containers:
        - name: backend
          image: us-central1-docker.pkg.dev/intern-466414/my-repo/backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
