k8s/backend-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-nodeport
  annotations:
    # Azure specific service annotations
    service.beta.kubernetes.io/azure-load-balancer-internal: "false"
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 443
      targetPort: 5000
      nodePort: 31977
  type: NodePort
